<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_OpenSettingsActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showSettings"
        android:text="@string/title_Settings"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/btn_OpenResultActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="showResult"
        android:text="@string/title_Result"
        app:layout_constraintBottom_toTopOf="@+id/lbl_HeaderSettings"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_OpenSettingsActivity" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/txt_QtyHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty_Horizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/lbl_HeaderSettings" />

    <TextView
        android:id="@+id/lbl_HeaderSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_CurrentSettings"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/txt_QtyVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty_Vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txt_QtyHorizontal" />

    <TextView
        android:id="@+id/txt_Color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Color"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txt_QtyVertical" />

    <TextView
        android:id="@+id/txt_Size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Size"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txt_Color" />
</androidx.constraintlayout.widget.ConstraintLayout>